<resources>
    <string name="app_name">mCOP</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="defaultinterval">1</string>
    <string name="actionupload">Upload File</string>
    <string name="actionallowaccess">Allow App Access</string>
    <string name="tip"><b>Tip:</b></string>
    <string name="action_resetFile">Reset File</string>
    <string name="title_activity_test">Test</string>
    <string name="term_of_service">Terms of Service\n1.xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\n2.xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\n3.xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\n4.xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\n5.xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\n6.xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</string>
    <string name="accept_term">I accept the terms of service</string>
    <string name="button_start">Start Monitoring</string>
    <string name="uninstall">Uninstall</string>
    <string name="app_manager">App Manager</string>
    <string name="init">Initializing</string>
    <string name="init_analyze">Analysing your device for suspicious applications, Please wait.</string>
    <string name="icon">Icon</string>
    <string name="menu_home">Home</string>
    <string name="menu_app_list">App List</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="version">Version :</string>
    <string name="version_code">Version Code :</string>
    <string name="label_app_name">App Name</string>
    <string name="permissions">Permissions :</string>
    <string name="dashboard_safe">Your device is safe</string>
    <string name="dashboard_suspicious"> Malware Suspicious</string>
    <string name="total_installed_app">Total installed app:</string>
    <string name="app_using_internet">App using internet:</string>
    <string name="tos">Terms of Service</string>
    <string name="risk_type">Risk Detected</string>
    <string name="login_user">User</string>
    <string name="login_user_value"></string>
    <string name="login_password">Password</string>
    <string name="login_password_value"></string>
    <string name="login_cancel">Cancel</string>
    <string name="login_login">Login</string>
</resources>
