<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@android:color/white"
    >

    <include layout="@layout/layout_title_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tos"
            android:id="@+id/textTitle"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:textColor="#f2a354"
            android:textStyle="bold"
            android:textSize="30sp" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/border"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/term_of_service"
                android:id="@+id/text_scroll" />
        </ScrollView>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept_term"
            android:id="@+id/checkbox_is_accept"
            android:layout_gravity="left"
            android:layout_marginLeft="30dp"
            android:checked="false"
            android:onClick="ToggleAccept"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="100dp" />

        <Button
            android:id="@+id/button_start"
            android:layout_width="250dp"
            android:layout_height="85dp"
            android:text="@string/button_start"
            android:onClick="StartMonitoring"
            android:background="@drawable/button"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:enabled="false"
            android:textColor="#f2a354"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:textSize="24sp" />


    </RelativeLayout>

</LinearLayout>