<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_malware_info"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:fillViewport="true"
    android:background="@android:color/white"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="th.ac.bu.science.mit.allappstatscollector.Activities.MalwareInfoActivity"
    >

    <include layout="@layout/layout_title_bar"
        android:layout_weight="0.5"
        android:layout_width="fill_parent"
        android:layout_height="0dp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView2"
            android:layout_gravity="center_horizontal"
            android:layout_above="@+id/button"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp">

            <LinearLayout
                android:id="@+id/linear1"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.06">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:id="@+id/appIcon"
                        android:src="@drawable/icon_app"
                        android:contentDescription="@string/icon" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:id="@+id/textAppName"
                            android:textStyle="bold"
                            android:text="label App Name" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:id="@+id/textPackageName"
                            android:text="label Package Name" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/version"
                        android:id="@+id/textView3"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/textVersionName" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/version_code"
                        android:id="@+id/textView5"
                        android:textStyle="bold"
                        android:layout_marginTop="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/textVersionCode" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Risk Level : High"
                        android:id="@+id/textView7"
                        android:textStyle="bold"
                        android:layout_marginTop="15dp"
                        android:textColor="@android:color/holo_red_dark" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/listMalwareInfo"></LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/permissions"
                        android:id="@+id/textView6"
                        android:textStyle="bold"
                        android:layout_marginTop="15dp" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/listPermission"></LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </ScrollView>


        <Button
            android:id="@+id/button"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal|bottom"
            android:text="@string/app_manager"
            android:background="@drawable/button"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:enabled="true"
            android:onClick="OpenAppManagement"
            android:textColor="#f2a354"
            android:textAllCaps="false"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <include layout="@layout/layout_menu"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="0dp" />
</LinearLayout>
